fixtures/parser/invalid/unclosed_block.php
<?php
// invalid: unclosed function block
function broken() {
    echo "broken";
